src/objects/Household_Naming_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for controlling how Households are named (Name, Formal Greeting, Informal Greeting).</description>
    <label>Household Naming Settings</label>
    <fields>
        <fullName>Contact_Overrun_Count__c</fullName>
        <description>Specifies the number of Contacts to explicitly list in a name.  After that amount, the Name Overrun will be used.</description>
        <inlineHelpText>Specifies the number of Contacts to explicitly list in a name.  After that amount, the Name Overrun will be used.</inlineHelpText>
        <label>Contact Overrun Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formal_Greeting_Format__c</fullName>
        <description>The format to use for the Household Formal Greeting.</description>
        <inlineHelpText>The format to use for the Household Formal Greeting.</inlineHelpText>
        <label>Formal Greeting Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Household_Name_Format__c</fullName>
        <description>The format to use for the Household Name.</description>
        <inlineHelpText>The format to use for the Household Name.</inlineHelpText>
        <label>Household Name Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementing_Class__c</fullName>
        <description>The name of a Class that implements the HH_INaming interface to use for Household Naming.</description>
        <inlineHelpText>The name of a Class that implements the HH_INaming interface to use for Household Naming.</inlineHelpText>
        <label>Implementing Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Informal_Greeting_Format__c</fullName>
        <description>The format to use for the Household Informal Greeting.</description>
        <inlineHelpText>The format to use for the Household Informal Greeting.</inlineHelpText>
        <label>Informal Greeting Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Connector__c</fullName>
        <description>The string to use to connect pairs in a name.  For example, John &amp; Jane, or John and Jane.</description>
        <inlineHelpText>The string to use to connect pairs in a name.  For example, John &amp; Jane, or John and Jane.</inlineHelpText>
        <label>Name Connector</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Overrun__c</fullName>
        <description>The string to use when replacing long lists of names.</description>
        <inlineHelpText>The string to use when replacing long lists of names.</inlineHelpText>
        <label>Name Overrun</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>